--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -118,19 +118,6 @@
     }
 }
 
-.home-footer {
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  padding: 5px 0;
-  bottom: 0;
-  .footer-text {
-    // color: #2196F3;
-    color: #111;
-    border-bottom: 1px dashed #111;
-  }
-}
-
 /**
  * Site footer
  */
